syntax = "proto3";

package org.example;

service CalculatorService {
  rpc addition (CalculatorRequest) returns (CalculatorReply) {}
  rpc subtraction (CalculatorRequest) returns (CalculatorReply) {}
  rpc multiplication (CalculatorRequest) returns (CalculatorReply) {}
  rpc division (CalculatorRequest) returns (CalculatorReply) {}
  rpc getPrimeNumber (Number) returns (stream Number) {}
  rpc calculateAverage (stream Number) returns (Number) {}
  rpc calculateSquareOfNumbers (stream Number) returns (stream Number) {}
}

message CalculatorRequest {
  double number1 = 1;
  double number2 = 2;
}

message CalculatorReply {
  double result = 1;
}

message Number{
  int32 number = 1;
}